tests/e2e/semantics/assignment_object_index_invalid2.error
Error: syntax error in story at line 2, column 1

2|    a.foo = 100
      ^

E0100: Can't assign `int` to `{string:int}`
