tests/e2e/semantics/assignment_object_index_invalid2.story
a = {"foo": {"bar:": 1}}
a.foo = 100
